--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pdf-lib": "^1.17.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-i18next": "^12.1.4",
@@ -39,8 +40,9 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
+    "@types/pako": "^2.0.3",
     "@types/react": "^18.0.27",
-    "@types/react-beautiful-dnd": "^13.1.3",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
